修改单元测试命名空间

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
   "autoload": {
     "psr-4": {
       "hollisho\\htranslator\\": "src",
-      "hollisho\\htranslator\\tests\\": "tests"
+      "hollisho\\htranslatorTests\\": "tests"
     }
   }
 }
