修改单元测试命名空间

--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,18 @@
   },
   "autoload": {
     "psr-4": {
-      "hollisho\\htranslator\\": "src",
-      "hollisho\\htranslatorTests\\": "tests"
-    }
+      "hollisho\\htranslator\\": "src"
+    },
+    "exclude-from-classmap": [
+      "/tests/"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "hollisho\\htranslatorTests\\": "tests/"
+    },
+    "exclude-from-classmap": [
+      "/tests/"
+    ]
   }
 }
