--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
   "require": {
     "php": ">=7.2",
     "hollisho/object-builder": "^1.0",
-    "fightbulc/moment": "^1.34",
-    "hollisho/php-helpers": "^1.0"
+    "fightbulc/moment": "^1.34"
   },
   "autoload": {
     "psr-4": {
